--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_activity_problems_list">ProblemsList</string>
     <string name="title_activity_problems_map">Map</string>
     <string name="title_activity_report_map">Map</string>
+    <string name="google_maps_key">AIzaSyDHTAiif761O5nOGHK-Qriy4SufZM4kHFA</string>
 </resources>
