--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="title_activity_problems_viewer">ProblemsViewerActivity</string>
     <string name="title_activity_details">DetailsActivity</string>
     <string name="title_activity_problems_list">ProblemsList</string>
+    <string name="title_activity_problems_map">Map</string>
+    <string name="title_activity_report_map">Map</string>
 </resources>
