--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="title_activity_problems_map">Map</string>
     <string name="title_activity_report_map">Map</string>
     <string name="google_maps_key">AIzaSyDHTAiif761O5nOGHK-Qriy4SufZM4kHFA</string>
+    <string name="image_of_problem">Image of problem</string>
+    <string name="add_image">Add image</string>
 </resources>
