--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="add_image">Add image</string>
     <string name="confirm">Confirm</string>
     <string name="cancel">Cancel</string>
-    <string name="description_hint">Enter short description of the problem</string>
+    <string name="description_hint">Short problem description</string>
     <string name="password">Password</string>
     <string name="email">Email</string>
     <string name="login">Login</string>
