plash screen without icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="placeholder_for_description">Placeholder for description</string>
     <string name="missing_fields">Some fields are missing</string>
+    <string name="title_activity_splash_screen">SplashScreen</string>
 </resources>
